# cuda-poly

./: .gitignore  CMakeLists.txt  pyproject.toml
src/: fft.hpp  main.cpp
