[project]
name = "cuda_poly"
version = "0.0.1"
requires-python = ">=3.14"
license = "MIT"
readme = "README.md"

[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[dependency-groups]
test = ["pytest"]
dev = [{ include-group = "test" }]

jtool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.pytest.ini_options]
testpaths = ["tests"]


